Setup figwheel system, web server and dev system